tests/snapshot/error/regexp/source_location_unicode.exp
SyntaxError: Invalid quantifier bounds in regular expression
  ┌ regexp/source_location_unicode.js:2:3
  |
2 | /😂{2,1}/u;
  |   ^